# rust-zero-to-polkadot-hero

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
config-loader/: Cargo.toml  config.json
config-loader/src/: main.rs
enum-traits-generics/: Cargo.toml
enum-traits-generics/src/: main.rs
error-handling/src/: main.rs
hello_rust/src/: main.rs
module-5/: Cargo.toml
module-5-miniproject/: .env  Cargo.toml
module-5-miniproject/src/: main.rs
module-5/src/: main.rs
ownership/src/: main.rs
rust_rest_api/: Cargo.toml
rust_rest_api/migrations/: 20250930134717_create_users.sql
rust_rest_api/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  routes.rs
word_counter/: sample.txt
word_counter/src/: main.rs
