[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.5", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
thiserror = { version = "2.0.17" }
